--- a/templates/post.html
+++ b/templates/post.html
@@ -1,3 +1,5 @@
+{% import "bootstrap/wtf.html" as wtf %}
+
 {% include "header.html" %}
 
   <!-- Page Header -->
@@ -10,7 +12,7 @@
             <h1>{{post.title}}</h1>
             <h2 class="subheading">{{post.subtitle}}</h2>
             <span class="meta">Posted by
-              <a href="#">{{post.author}}</a>
+              <a href="#">{{post.author.name}}</a>
               on {{post.date}}</span>
           </div>
         </div>
@@ -31,21 +33,28 @@
             <a class="btn btn-primary float-right" href="{{url_for('edit_post', post_id=post.id)}}">Edit Post</a>
           </div>
           {% endif %}
+          <div class="row">
+            <div class="col-lg-8 col-md-10 mx-auto">
+              {{ ckeditor.load() }}
+              {{ ckeditor.config(name='text') }}
+              {{ wtf.quick_form(comment_form, novalidate=True, button_map={"submit": "primary"}) }}
+            </div>
+          </div>
           <div class="col-lg-8 col-md-10 mx-auto comment">
               <ul class="commentList">
+                {% for comment in post.comments %}
                 <li>
                     <div class="commenterImage">
                       <img src="https://pbs.twimg.com/profile_images/744849215675838464/IH0FNIXk.jpg"/>
                     </div>
                     <div class="commentText">
-                      <p>Some comment</p>
-                      <span class="date sub-text">comment author name</span>
+                      {{ comment.text | safe }}
+                      <span class="date sub-text">{{ comment.commenter.name }}</span>
                     </div>
                 </li>
+                {% endfor %}
               </ul>
             </div>
-
-
           </div>
       </div>
     </div>
